<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.baihakidwi.android.kitabuljami.HaditsViewActivity" >

    <item
        android:id="@+id/action_bookmark"
        android:icon="@drawable/bookmark1"
        android:orderInCategory="1"
        android:title="@string/action_bookmark"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_enlarge_text"
        android:orderInCategory="40"
        android:title="@string/action_enlarge_text"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_shrink_text"
        android:orderInCategory="50"
        android:title="@string/action_shrink_text"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_copy"
        android:orderInCategory="10"
        android:title="@string/action_copy"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_copy_hadits"
        android:orderInCategory="20"
        android:title="@string/action_copy_hadits"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_copy_terjemah"
        android:orderInCategory="30"
        android:title="@string/action_copy_terjemah"
        app:showAsAction="never"/>

</menu>