<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/win8_blue"
    android:orientation="vertical"
    tools:context="com.wahdahislamiyah.android.kitabuljami.HomeActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/margin_extra_wide"
        android:text="@string/label_app_name"
        android:textColor="@color/WhiteSmoke"
        android:textSize="@dimen/text_size_arab_big"
        android:textStyle="bold" />

    <Button
        android:id="@+id/activity_home_button_index"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/margin_wide"
        android:background="@color/WhiteSmoke"
        android:text="@string/label_index" />

    <Button
        android:id="@+id/activity_home_button_bookmark"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/margin_wide"
        android:background="@color/WhiteSmoke"
        android:text="@string/label_bookmark" />

    <Button
        android:id="@+id/activity_home_button_search"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/margin_wide"
        android:background="@color/WhiteSmoke"
        android:text="@string/label_search" />

    <Button
        android:id="@+id/activity_home_button_info"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/margin_wide"
        android:background="@color/WhiteSmoke"
        android:text="@string/label_info" />

</LinearLayout>